--- a/style.css
+++ b/style.css
@@ -78,9 +78,84 @@ button, input[type=submit], input[type=reset] {
   outline: inherit;
 }
 
+#slider {
+  position: relative;
+  overflow: hidden;
+  border-radius: 4px;
+  font-size: 0.65em;
+  margin: 0 auto;
+}
+
+#slider ul {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 12.5em;
+  list-style: none;
+}
+
+#slider ul li {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 31.25em;
+  height: 18.75em;
+  background: #ccc;
+  text-align: center;
+  line-height: 18.75em;
+}
+
+a.control_prev, a.control_next {
+  position: absolute;
+  top: 40%;
+  z-index: 1;
+  display: block;
+  padding: 4% 3%;
+  width: auto;
+  height: auto;
+  background: #2a2a2a;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+a.control_prev:hover, a.control_next:hover {
+  opacity: 1;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+a.control_prev {
+  border-radius: 0 2px 2px 0;
+}
+
+a.control_next {
+  right: 0;
+  border-radius: 2px 0 0 2px;
+}
+
+.slider_option {
+  position: relative;
+  margin: 10px auto;
+  width: 10em;
+  font-size: 18px;
+}
+
+.slider__imagen {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   background: whitesmoke;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .container {
@@ -102,6 +177,18 @@ body {
 
 .main-header {
   font-size: 17px;
+}
+
+#slider {
+  font-size: 0.8em;
+}
+
+.propiedad__caracteristicas--sized {
+  font-size: 1.25em;
+}
+
+.footer {
+  font-size: 0.9em;
 }
 
 .top-header {
@@ -356,11 +443,95 @@ body {
   justify-content: center;
 }
 
-.pag-inmuebles {
+.pag-inmuebles, .pag-single {
   display: flex;
   flex-direction: column;
-  padding-top: 2.5em;
+  padding: 2.5em 0;
   margin: 0 auto;
+}
+
+.info-inmueble {
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+}
+.info-inmueble__heading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: white;
+  box-sizing: border-box;
+  padding: 1.5625em 1.25em;
+  justify-content: space-between;
+  margin-bottom: 1.5625em;
+}
+.info-inmueble__titulo {
+  font-size: 0.96875em;
+  margin-bottom: 0.5625em;
+  font-weight: bold;
+}
+.info-inmueble__direccion {
+  font-size: 0.8125em;
+  display: flex;
+  align-items: center;
+}
+.info-inmueble__direccion svg {
+  margin: 0;
+  margin-right: 0.125em;
+  height: 0.9375em;
+}
+.info-inmueble__direccion svg path {
+  fill: #62b9ff;
+}
+.info-inmueble__precio-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.info-inmueble__precio {
+  color: #62b9ff;
+  font-weight: bold;
+  margin-bottom: 0.5625em;
+}
+.info-inmueble__precio-criterio {
+  color: #62b9ff;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+.info-inmueble__descripcion {
+  background: #fff;
+  margin-top: 1.5625em;
+  padding: 1.5625em 1.25em;
+}
+.info-inmueble__descripcion-titulo {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  margin-bottom: 2.5em;
+}
+.info-inmueble__descripcion-titulo span {
+  font-weight: 400;
+}
+.info-inmueble__descripcion-texto {
+  max-width: 28.125em;
+  font-size: 0.8125em;
+  margin-bottom: 2.5em;
+}
+.info-inmueble__mas-info {
+  font-size: 0.9375em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  text-align: center;
+  display: block;
+  margin-top: 3.125em;
+  width: 100%;
+  background: #62b9ff;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  padding: 1.125em 0;
 }
 
 .inmuebles {
@@ -410,7 +581,8 @@ body {
 }
 
 .buscador-aside {
-  margin: 1.5625em auto;
+  font-size: 0.9em;
+  margin: 1.5625em auto 0 auto;
   padding: 1.5625em 1.25em;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -467,6 +639,9 @@ body {
   max-height: 11.875em;
   background: white;
   text-decoration: none;
+}
+.propiedad-index {
+  max-height: 10.625em;
 }
 .propiedad--last {
   margin-bottom: 0;
@@ -697,7 +872,8 @@ body {
   text-decoration: none;
 }
 .propiedad-reciente__imagen {
-  width: 18%;
+  width: 21%;
+  height: 21%;
   object-fit: cover;
 }
 .propiedad-reciente__fecha {
@@ -832,6 +1008,15 @@ body {
   background: rgba(255, 0, 0, 0.3);
 }
 
+@media (max-width: 375px) {
+  html {
+    font-size: 0.8em;
+  }
+
+  #slider {
+    font-size: 0.7em;
+  }
+}
 @media (min-width: 768px) {
   .buscador {
     font-size: 1.1em;
@@ -851,6 +1036,10 @@ body {
 
   .tasaciones {
     font-size: 0.9375em;
+  }
+
+  .propiedad__caracteristicas--sized {
+    font-size: 1.32em;
   }
 
   .banner {
@@ -904,7 +1093,7 @@ body {
     flex-basis: 49%;
   }
 
-  .pag-inmuebles {
+  .pag-inmuebles, .pag-single {
     flex-direction: row;
     position: relative;
   }
@@ -927,7 +1116,7 @@ body {
     top: 135px;
     left: 0;
     margin-top: 0;
-    margin: 0 0 2.125em 0.9375em;
+    margin: 0 0 0 0.9375em;
     border-radius: 0 7px 7px 0;
     flex-shrink: 1;
     height: 100%;
@@ -1052,6 +1241,15 @@ body {
   .copyright {
     margin-top: 3.125em;
   }
+
+  #slider {
+    font-size: 0.8em;
+  }
+
+  .info-inmueble {
+    max-width: 60%;
+    flex-grow: 1;
+  }
 }
 @media (min-width: 1025px) {
   .buscador {
@@ -1162,6 +1360,9 @@ body {
   .propiedad__dato {
     flex-basis: 32%;
   }
+  .propiedad-index {
+    max-height: 9.0625em;
+  }
 
   .inmuebles__icono {
     padding: 0.9375em 0.625em;
@@ -1189,6 +1390,20 @@ body {
 
   .propiedad-reciente__contenido {
     font-size: 0.95em;
+  }
+
+  .buscador-aside {
+    font-size: 1em;
+    position: sticky;
+    top: 155px;
+  }
+
+  #slider {
+    font-size: 1.17em;
+  }
+
+  .info-inmueble {
+    max-width: 60%;
   }
 }
 @media (min-width: 2560px) {
