--- a/partials/laptop.css
+++ b/partials/laptop.css
@@ -103,37 +103,51 @@
  * 101 | |         &__dato {
  * 102 | |             flex-basis: 32%;
  * 103 | |         }
- * 104 | |     }
- * 105 | |     .inmuebles{
- * 106 | |         &__icono {
- * 107 | |             padding:em(15px) em(10px);
- * 108 | |         }
- * 109 | |     }
- * 110 | |     .tasaciones {
- * 111 | |         &__titulo {
- * 112 | |             font-size: em(20px);
- * 113 | |         }
- * 114 | |         &__cta {
- * 115 | |             font-size: em(16px);
+ * 104 | |         &-index {
+ * 105 | |             max-height:em(145px);  
+ * 106 | |         }
+ * 107 | |     }
+ * 108 | |     .inmuebles{
+ * 109 | |         &__icono {
+ * 110 | |             padding:em(15px) em(10px);
+ * 111 | |         }
+ * 112 | |     }
+ * 113 | |     .tasaciones {
+ * 114 | |         &__titulo {
+ * 115 | |             font-size: em(20px);
  * 116 | |         }
- * 117 | |     }
- * 118 | |     .links {
- * 119 | |         display:flex;
- * 120 | |         border-right: 1px solid #888;
- * 121 | |         border-left: 1px solid #888;
- * 122 | |         margin-right: em(50px);
- * 123 | |         padding-left: em(50px);
- * 124 | |     }
- * 125 | |     .contacto {
- * 126 | |         padding-left:0;
- * 127 | |         padding-right:0;
- * 128 | |     }
- * 129 | |     .propiedad-reciente {
- * 130 | |         &__contenido {
- * 131 | |             font-size: 0.95em;
- * 132 | |         }
- * 133 | |     }
- * 134 | \ }
+ * 117 | |         &__cta {
+ * 118 | |             font-size: em(16px);
+ * 119 | |         }
+ * 120 | |     }
+ * 121 | |     .links {
+ * 122 | |         display:flex;
+ * 123 | |         border-right: 1px solid #888;
+ * 124 | |         border-left: 1px solid #888;
+ * 125 | |         margin-right: em(50px);
+ * 126 | |         padding-left: em(50px);
+ * 127 | |     }
+ * 128 | |     .contacto {
+ * 129 | |         padding-left:0;
+ * 130 | |         padding-right:0;
+ * 131 | |     }
+ * 132 | |     .propiedad-reciente {
+ * 133 | |         &__contenido {
+ * 134 | |             font-size: 0.95em;
+ * 135 | |         }
+ * 136 | |     }
+ * 137 | |     .buscador-aside {
+ * 138 | |         font-size:1em;
+ * 139 | |         position:sticky;
+ * 140 | |         top:155px;
+ * 141 | |     }
+ * 142 | |     #slider {
+ * 143 | |         font-size:1.17em;
+ * 144 | |     }
+ * 145 | |     .info-inmueble {
+ * 146 | |         max-width:60%;
+ * 147 | |     }
+ * 148 | \ }
  *     '
  *   sass/partials/laptop.scss 1:1  root stylesheet */
 
@@ -145,5 +159,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a     \2577 \a 1   \2502  \250c  @include mq('xl') {\a 2   \2502  \2502      // Cambiar tamaños en estas lineas\a 3   \2502  \2502      .buscador {\a 4   \2502  \2502          font-size:1.2em;\a 5   \2502  \2502      }\a 6   \2502  \2502      .destacados,.inmuebles {\a 7   \2502  \2502          font-size: 1.15em;\a 8   \2502  \2502      }\a 9   \2502  \2502      .banner {\a 10  \2502  \2502          font-size: 2em;\a 11  \2502  \2502      }\a 12  \2502  \2502      .servicios {\a 13  \2502  \2502          font-size: 1.1em;\a 14  \2502  \2502      }\a 15  \2502  \2502      .top-header {\a 16  \2502  \2502          font-size:28px;\a 17  \2502  \2502      }\a 18  \2502  \2502      .main-header {\a 19  \2502  \2502          font-size:21px;\a 20  \2502  \2502      }\a 21  \2502  \2502      .tasaciones {\a 22  \2502  \2502          font-size: em(15px);\a 23  \2502  \2502      }\a 24  \2502  \2502      .contacto,.links,.recientes {\a 25  \2502  \2502          font-size: 1.15em;\a 26  \2502  \2502      }\a 27  \2502  \2502      .container {\a 28  \2502  \2502          // Espacio de dos lados del contenedor\a 29  \2502  \2502          //margin: 0 em(11px);\a 30  \2502  \2502          width:100%;\a 31  \2502  \2502          max-width:$container-width;\a 32  \2502  \2502          margin:0 auto;\a 33  \2502  \2502      }\a 34  \2502  \2502      .main-header {\a 35  \2502  \2502          font-weight:600;\a 36  \2502  \2502          background:$blanco;\a 37  \2502  \2502          height:auto;\a 38  \2502  \2502          -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 39  \2502  \2502          -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 40  \2502  \2502          box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 41  \2502  \2502          &__logo {\a 42  \2502  \2502              img {\a 43  \2502  \2502                  height:em(50px);\a 44  \2502  \2502                  margin: em(5px) 0 ;\a 45  \2502  \2502                  position:relative;\a 46  \2502  \2502                  transform:translateX(-7%);\a 47  \2502  \2502              }\a 48  \2502  \2502          }\a 49  \2502  \2502          &__container {\a 50  \2502  \2502              height:auto;\a 51  \2502  \2502          }\a 52  \2502  \2502      }\a 53  \2502  \2502      .banner {\a 54  \2502  \2502          height:90vh;\a 55  \2502  \2502          &__info {\a 56  \2502  \2502              max-width:$container-width;\a 57  \2502  \2502          }\a 58  \2502  \2502          &__titulo {\a 59  \2502  \2502              padding:0;\a 60  \2502  \2502              font-size: em(18px);\a 61  \2502  \2502              max-width:75%;\a 62  \2502  \2502          }\a 63  \2502  \2502          &__descripcion {\a 64  \2502  \2502              font-size:em(9px);\a 65  \2502  \2502          }\a 66  \2502  \2502      }\a 67  \2502  \2502      .servicios {\a 68  \2502  \2502          &__contenedor {\a 69  \2502  \2502              justify-content: space-between;\a 70  \2502  \2502          }\a 71  \2502  \2502          &__elemento {\a 72  \2502  \2502              font-size:1.1em;\a 73  \2502  \2502              width:16.6%;\a 74  \2502  \2502              border:none;\a 75  \2502  \2502              border-radius:0;\a 76  \2502  \2502              border-right:1px solid white;\a 77  \2502  \2502              &--first {\a 78  \2502  \2502                  border-left:1px solid white;\a 79  \2502  \2502              }\a 80  \2502  \2502          }\a 81  \2502  \2502          &__link {\a 82  \2502  \2502              width:100%;\a 83  \2502  \2502          }\a 84  \2502  \2502      }\a 85  \2502  \2502  \a 86  \2502  \2502      .destacados {\a 87  \2502  \2502          padding:60px 0;\a 88  \2502  \2502          &__titulo-seccion {\a 89  \2502  \2502              font-size:em(21px);\a 90  \2502  \2502              padding-bottom:40px;\a 91  \2502  \2502              &::after {\a 92  \2502  \2502                  content:'';\a 93  \2502  \2502                  height:2px;\a 94  \2502  \2502                  width:5%;\a 95  \2502  \2502              }\a 96  \2502  \2502          }\a 97  \2502  \2502      }\a 98  \2502  \2502      .propiedad {\a 99  \2502  \2502          margin-bottom:em(30px);\a 100 \2502  \2502          max-height:em(195px);\a 101 \2502  \2502          &__dato {\a 102 \2502  \2502              flex-basis: 32%;\a 103 \2502  \2502          }\a 104 \2502  \2502      }\a 105 \2502  \2502      .inmuebles{\a 106 \2502  \2502          &__icono {\a 107 \2502  \2502              padding:em(15px) em(10px);\a 108 \2502  \2502          }\a 109 \2502  \2502      }\a 110 \2502  \2502      .tasaciones {\a 111 \2502  \2502          &__titulo {\a 112 \2502  \2502              font-size: em(20px);\a 113 \2502  \2502          }\a 114 \2502  \2502          &__cta {\a 115 \2502  \2502              font-size: em(16px);\a 116 \2502  \2502          }\a 117 \2502  \2502      }\a 118 \2502  \2502      .links {\a 119 \2502  \2502          display:flex;\a 120 \2502  \2502          border-right: 1px solid #888;\a 121 \2502  \2502          border-left: 1px solid #888;\a 122 \2502  \2502          margin-right: em(50px);\a 123 \2502  \2502          padding-left: em(50px);\a 124 \2502  \2502      }\a 125 \2502  \2502      .contacto {\a 126 \2502  \2502          padding-left:0;\a 127 \2502  \2502          padding-right:0;\a 128 \2502  \2502      }\a 129 \2502  \2502      .propiedad-reciente {\a 130 \2502  \2502          &__contenido {\a 131 \2502  \2502              font-size: 0.95em;\a 132 \2502  \2502          }\a 133 \2502  \2502      }\a 134 \2502  \2514  }\a     \2575 \a   sass/partials/laptop.scss 1:1  root stylesheet";
+  content: "Error: Undefined mixin.\a     \2577 \a 1   \2502  \250c  @include mq('xl') {\a 2   \2502  \2502      // Cambiar tamaños en estas lineas\a 3   \2502  \2502      .buscador {\a 4   \2502  \2502          font-size:1.2em;\a 5   \2502  \2502      }\a 6   \2502  \2502      .destacados,.inmuebles {\a 7   \2502  \2502          font-size: 1.15em;\a 8   \2502  \2502      }\a 9   \2502  \2502      .banner {\a 10  \2502  \2502          font-size: 2em;\a 11  \2502  \2502      }\a 12  \2502  \2502      .servicios {\a 13  \2502  \2502          font-size: 1.1em;\a 14  \2502  \2502      }\a 15  \2502  \2502      .top-header {\a 16  \2502  \2502          font-size:28px;\a 17  \2502  \2502      }\a 18  \2502  \2502      .main-header {\a 19  \2502  \2502          font-size:21px;\a 20  \2502  \2502      }\a 21  \2502  \2502      .tasaciones {\a 22  \2502  \2502          font-size: em(15px);\a 23  \2502  \2502      }\a 24  \2502  \2502      .contacto,.links,.recientes {\a 25  \2502  \2502          font-size: 1.15em;\a 26  \2502  \2502      }\a 27  \2502  \2502      .container {\a 28  \2502  \2502          // Espacio de dos lados del contenedor\a 29  \2502  \2502          //margin: 0 em(11px);\a 30  \2502  \2502          width:100%;\a 31  \2502  \2502          max-width:$container-width;\a 32  \2502  \2502          margin:0 auto;\a 33  \2502  \2502      }\a 34  \2502  \2502      .main-header {\a 35  \2502  \2502          font-weight:600;\a 36  \2502  \2502          background:$blanco;\a 37  \2502  \2502          height:auto;\a 38  \2502  \2502          -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 39  \2502  \2502          -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 40  \2502  \2502          box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 41  \2502  \2502          &__logo {\a 42  \2502  \2502              img {\a 43  \2502  \2502                  height:em(50px);\a 44  \2502  \2502                  margin: em(5px) 0 ;\a 45  \2502  \2502                  position:relative;\a 46  \2502  \2502                  transform:translateX(-7%);\a 47  \2502  \2502              }\a 48  \2502  \2502          }\a 49  \2502  \2502          &__container {\a 50  \2502  \2502              height:auto;\a 51  \2502  \2502          }\a 52  \2502  \2502      }\a 53  \2502  \2502      .banner {\a 54  \2502  \2502          height:90vh;\a 55  \2502  \2502          &__info {\a 56  \2502  \2502              max-width:$container-width;\a 57  \2502  \2502          }\a 58  \2502  \2502          &__titulo {\a 59  \2502  \2502              padding:0;\a 60  \2502  \2502              font-size: em(18px);\a 61  \2502  \2502              max-width:75%;\a 62  \2502  \2502          }\a 63  \2502  \2502          &__descripcion {\a 64  \2502  \2502              font-size:em(9px);\a 65  \2502  \2502          }\a 66  \2502  \2502      }\a 67  \2502  \2502      .servicios {\a 68  \2502  \2502          &__contenedor {\a 69  \2502  \2502              justify-content: space-between;\a 70  \2502  \2502          }\a 71  \2502  \2502          &__elemento {\a 72  \2502  \2502              font-size:1.1em;\a 73  \2502  \2502              width:16.6%;\a 74  \2502  \2502              border:none;\a 75  \2502  \2502              border-radius:0;\a 76  \2502  \2502              border-right:1px solid white;\a 77  \2502  \2502              &--first {\a 78  \2502  \2502                  border-left:1px solid white;\a 79  \2502  \2502              }\a 80  \2502  \2502          }\a 81  \2502  \2502          &__link {\a 82  \2502  \2502              width:100%;\a 83  \2502  \2502          }\a 84  \2502  \2502      }\a 85  \2502  \2502  \a 86  \2502  \2502      .destacados {\a 87  \2502  \2502          padding:60px 0;\a 88  \2502  \2502          &__titulo-seccion {\a 89  \2502  \2502              font-size:em(21px);\a 90  \2502  \2502              padding-bottom:40px;\a 91  \2502  \2502              &::after {\a 92  \2502  \2502                  content:'';\a 93  \2502  \2502                  height:2px;\a 94  \2502  \2502                  width:5%;\a 95  \2502  \2502              }\a 96  \2502  \2502          }\a 97  \2502  \2502      }\a 98  \2502  \2502      .propiedad {\a 99  \2502  \2502          margin-bottom:em(30px);\a 100 \2502  \2502          max-height:em(195px);\a 101 \2502  \2502          &__dato {\a 102 \2502  \2502              flex-basis: 32%;\a 103 \2502  \2502          }\a 104 \2502  \2502          &-index {\a 105 \2502  \2502              max-height:em(145px);  \a 106 \2502  \2502          }\a 107 \2502  \2502      }\a 108 \2502  \2502      .inmuebles{\a 109 \2502  \2502          &__icono {\a 110 \2502  \2502              padding:em(15px) em(10px);\a 111 \2502  \2502          }\a 112 \2502  \2502      }\a 113 \2502  \2502      .tasaciones {\a 114 \2502  \2502          &__titulo {\a 115 \2502  \2502              font-size: em(20px);\a 116 \2502  \2502          }\a 117 \2502  \2502          &__cta {\a 118 \2502  \2502              font-size: em(16px);\a 119 \2502  \2502          }\a 120 \2502  \2502      }\a 121 \2502  \2502      .links {\a 122 \2502  \2502          display:flex;\a 123 \2502  \2502          border-right: 1px solid #888;\a 124 \2502  \2502          border-left: 1px solid #888;\a 125 \2502  \2502          margin-right: em(50px);\a 126 \2502  \2502          padding-left: em(50px);\a 127 \2502  \2502      }\a 128 \2502  \2502      .contacto {\a 129 \2502  \2502          padding-left:0;\a 130 \2502  \2502          padding-right:0;\a 131 \2502  \2502      }\a 132 \2502  \2502      .propiedad-reciente {\a 133 \2502  \2502          &__contenido {\a 134 \2502  \2502              font-size: 0.95em;\a 135 \2502  \2502          }\a 136 \2502  \2502      }\a 137 \2502  \2502      .buscador-aside {\a 138 \2502  \2502          font-size:1em;\a 139 \2502  \2502          position:sticky;\a 140 \2502  \2502          top:155px;\a 141 \2502  \2502      }\a 142 \2502  \2502      #slider {\a 143 \2502  \2502          font-size:1.17em;\a 144 \2502  \2502      }\a 145 \2502  \2502      .info-inmueble {\a 146 \2502  \2502          max-width:60%;\a 147 \2502  \2502      }\a 148 \2502  \2514  }\a     \2575 \a   sass/partials/laptop.scss 1:1  root stylesheet";
 }
