--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,9 +14,12 @@ Text Domain: SolerVismara
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
-@import'partials/variables';
+
 @import'partials/reset';
+@import'partials/variables';
+@import'partials/slideshow';
 @import'partials/main';
+@import'partials/xs';
 @import'partials/tablet';
 @import'partials/laptop';
 @import'partials/4k';
