--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -850,6 +850,9 @@ body {
             width:100%;
         }
         &--boton-final {
+            display:block;
+            flex-basis: 100%;
+            width:100%;
             border:none;
             padding-left:0;
             padding-right:0;
