--- a/style.css
+++ b/style.css
@@ -540,6 +540,115 @@ html, body {
   display: block;
 }
 
+.pag-contacto {
+  padding: 2.5em 0;
+  margin: 0 auto;
+}
+.pag-contacto__titulo {
+  font-size: 1.375em;
+  text-transform: uppercase;
+  margin-bottom: 1.25em;
+  border-bottom: 1px solid #ccc;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+.pag-contacto__titulo::after {
+  content: "";
+  margin-top: 0.5em;
+  display: block;
+  height: 0.1875em;
+  width: 1.875em;
+  background: #62b9ff;
+}
+.pag-contacto__titulo span {
+  font-weight: 400;
+}
+.pag-contacto__info-contacto {
+  margin-top: 60px;
+}
+.pag-contacto__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.pag-contacto__formulario {
+  display: flex;
+  flex-direction: column;
+}
+.pag-contacto__elemento-input, .pag-contacto__elemento-area {
+  font-family: "Open Sans", sans-serif;
+  color: #999;
+  border: 1px solid #ccc;
+  padding: 0.9375em 0.9375em;
+  margin: 0.9375em 0 0 0;
+  font-size: 0.75em;
+}
+.pag-contacto__elemento-input::placeholder, .pag-contacto__elemento-area::placeholder {
+  color: #999;
+}
+.pag-contacto__elemento-area {
+  resize: none;
+  margin: 2.8125em 0 1.25em 0;
+}
+.pag-contacto__elemento-boton {
+  font-size: 0.9375em;
+  background: #62b9ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.9375em 0;
+}
+.pag-contacto__social {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 0 1.5625em 0;
+  font-size: 0.9375em;
+}
+.pag-contacto__social-elemento {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.pag-contacto__social-icon {
+  height: 3.125em;
+}
+.pag-contacto__social-icon path, .pag-contacto__social-icon circle {
+  fill: #62b9ff;
+}
+.pag-contacto__telefono {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.9375em 2.5em 0.9375em 2.5em;
+}
+.pag-contacto__telefono-icon {
+  vertical-align: middle;
+  padding: 0.9375em;
+  border: 1px dashed #62b9ff;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  height: 1.875em;
+  width: 1.875em;
+}
+.pag-contacto__telefono-icon path, .pag-contacto__telefono-icon circle {
+  fill: #62b9ff;
+}
+.pag-contacto__telefono-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.9375em;
+}
+.pag-contacto__telefono-info span:nth-child(2) {
+  font-size: 0.8125em;
+  margin-top: 0.625em;
+}
+
 .info-inmueble {
   justify-content: center;
   flex-direction: column;
@@ -1110,7 +1219,7 @@ html, body {
     font-size: 0.7em;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 767px) {
   .buscador {
     font-size: 1.1em;
   }
@@ -1371,6 +1480,31 @@ html, body {
     max-width: 60%;
     flex-grow: 1;
   }
+
+  .pag-contacto__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+  .pag-contacto__formulario, .pag-contacto__info-contacto {
+    width: 40%;
+    box-sizing: border-box;
+  }
+  .pag-contacto__formulario input:first-child {
+    margin-top: 0;
+  }
+  .pag-contacto__info-contacto {
+    background: white;
+    margin-top: 0;
+    font-size: 0.9375em;
+    padding: 1.875em;
+    width: 55%;
+  }
+  .pag-contacto__elemento-area {
+    resize: none;
+    height: 100px;
+  }
 }
 @media (min-width: 1025px) {
   .buscador {
@@ -1548,6 +1682,10 @@ html, body {
   }
   .pag-compania__info-principal {
     border-right: 3px solid #62b9ff;
+  }
+
+  .pag-contacto__titulo {
+    font-size: 1.5625em;
   }
 }
 @media (min-width: 2560px) {
