--- a/sass/partials/laptop.scss
+++ b/sass/partials/laptop.scss
@@ -102,7 +102,8 @@
             flex-basis: 32%;
         }
         &-index {
-            max-height:em(145px);  
+            height: em(180px);
+            max-height: em(180px);
         }
     }
     .inmuebles{
