--- a/sass/partials/tablet.scss
+++ b/sass/partials/tablet.scss
@@ -65,10 +65,17 @@
             flex-direction:row;
             flex-wrap:wrap;
             justify-content: space-between;
+            article {
+                display:inline-block;
+                flex-basis:48%;
+            }
         }
     }
-    .propiedad {
-        flex-basis:49%;
+    .propiedad-index {
+        width: 100%;
+        flex-basis:100%;
+        height: em(180px);
+        max-height: em(180px);
     }
     .pag-inmuebles ,.pag-single{
         flex-direction:row;
