--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -1,10 +1,12 @@
 //@todo
 // agregar 'social' al footer
 // Ver max width del container en pantalla de 1024px
-// ver de hacer un condicional en las imagenes del slideshow para que no se repita la imagen principal
-// Mensaje en pagina inmuebles cuando no se encuentra ningun inmueble ( en el if del loop )
 // Pagina contacto modificar "otras formas.. "
 // Arreglar links footer
+// Arreglar extras en edit handler que no anda
+// Cuando se selecciona el orden se borran los queries pasados(Arreglar)
+// Arreglar pagina cuando se agrega o edita un inmueble
+// Quiero mas informacion en single.php agregar link de contacto
 
 
 body {
