buscadores single e inmuebles

--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -341,7 +341,7 @@ html, body {
 .pag-inmuebles , .pag-single,.pag-compania{
     display:flex;
     flex-direction:column;
-    padding:em(40px) 0;
+    padding:em(40px) 0 em(70px) 0;
     margin:0 auto;
 }
 
