--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -2,8 +2,8 @@
 // agregar 'social' al footer
 // Pagina contacto modificar "otras formas.. "
 // Arreglar pagina cuando se agrega o edita un inmueble
-// Ver mayusculas de titulos y campos con text-transform
 // boton login
+// links de telefonos en header completar
 
 
 body {
@@ -882,6 +882,7 @@ html, body {
     }
     &__imagen {
         height:100%;
+        z-index:1;
     }
     &__cta {
         border:1px solid white;
@@ -1045,7 +1046,7 @@ html, body {
 .copyright {
     font-family: 'Open Sans', sans-serif;
     color:$gris;
-    font-size: em(11px);
+    font-size: em(13px);
     text-align:center;
     border-top:1px solid #888;
     margin: 0 14px;
